--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "jspdf": "^2.5.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
